# maven-decoder-mcp

./: .dockerignore  .gitignore  DISTRIBUTION.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE_GUIDE.md  __init__.py  cursor_mcp_config_template.json  decompiler.py  decompiler_paths.py  example_config.env  index.js  install.sh  install_cursor_mcp.sh  maven_analyzer.py  maven_decoder_server.py  package.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  setup_decompilers.sh  setup_venv.sh  simple_release.sh  start_server.sh  test_startup.py
.github/workflows/: release.yml  test.yml
maven_decoder_mcp/: __init__.py  config.py  decompiler.py  maven_decoder_server.py
scripts/: install.js  release.py
skills/maven-code-search/: SKILL.md
skills/maven-code-search/agents/: openai.yaml
tests/: conftest.py  test_pagination.py
