[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maven-decoder-mcp"
version = "1.0.0"
description = "MCP server for reading and decompiling Maven .m2 jar files with comprehensive Java project analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ali Tabatabaei", email = "ali79taba@gmail.com"}
]
maintainers = [
    {name = "Ali Tabatabaei", email = "ali79taba@gmail.com"}
]
keywords = ["mcp", "maven", "java", "decompiler", "jar", "analysis", "cursor", "ide"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Disassemblers",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "xmltodict>=0.13.0",
    "javatools>=1.4.0",
    "py4j>=0.10.9",
    "aiofiles>=23.0.0",
    "pathspec>=0.11.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/salitaba/maven-decoder-mcp"
Documentation = "https://github.com/salitaba/maven-decoder-mcp#readme"
Repository = "https://github.com/salitaba/maven-decoder-mcp.git"
"Bug Tracker" = "https://github.com/salitaba/maven-decoder-mcp/issues"

[project.scripts]
maven-decoder-mcp = "maven_decoder_mcp.maven_decoder_server:main"
maven-decoder-setup = "setup:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["decompilers/*.jar", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
